Form is working, content added

--- a/about.html
+++ b/about.html
@@ -34,7 +34,12 @@
       id="ftco-navbar"
     >
       <div class="container">
-        <a class="navbar-brand" href="index.html"
+        <img
+          style="width: 50px; margin: 0 0.5em"
+          src="./images/entrust_legal_logo.jpg"
+          alt=""
+        />
+        <a class="navbar-brand" href="./index.html"
           >Entrust Legal <span>ADVOCATES AND IPR ATTORNEYS</span></a
         >
         <button
@@ -406,7 +411,12 @@
         <div class="row mb-5">
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-              <h2 class="logo">
+              <img
+                style="width: 150px; margin: 0 0.5em"
+                src="./images/entrust_legal_logo.jpg"
+                alt=""
+              />
+              <!-- <h2 class="logo">
                 <a href="#"
                   >Entrust Legal <span>ADVOCATES AND IPR ATTORNEYS</span></a
                 >
@@ -414,7 +424,7 @@
               <p>
                 Far far away, behind the word mountains, far from the countries
                 Vokalia and Consonantia, there live the blind texts.
-              </p>
+              </p> -->
               <ul
                 class="ftco-footer-social list-unstyled float-md-left float-lft mt-5"
               >
@@ -435,49 +445,49 @@
               <h2 class="ftco-heading-2">Practice Areas</h2>
               <ul class="list-unstyled">
                 <li>
-                  <a href="#" class="py-1 d-block"
+                  <a href="./practice-areas.html" class="py-1 d-block"
                     ><span class="ion-ios-arrow-forward mr-3"></span>Family
                     Law</a
                   >
                 </li>
                 <li>
-                  <a href="#" class="py-1 d-block"
+                  <a href="./practice-areas.html" class="py-1 d-block"
                     ><span class="ion-ios-arrow-forward mr-3"></span>Business
                     Law</a
                   >
                 </li>
                 <li>
-                  <a href="#" class="py-1 d-block"
+                  <a href="./practice-areas.html" class="py-1 d-block"
                     ><span class="ion-ios-arrow-forward mr-3"></span>Insurance
                     Law</a
                   >
                 </li>
                 <li>
-                  <a href="#" class="py-1 d-block"
+                  <a href="./practice-areas.html" class="py-1 d-block"
                     ><span class="ion-ios-arrow-forward mr-3"></span>Criminal
                     Law</a
                   >
                 </li>
                 <li>
-                  <a href="#" class="py-1 d-block"
+                  <a href="./practice-areas.html" class="py-1 d-block"
                     ><span class="ion-ios-arrow-forward mr-3"></span>Drug
                     Offenses</a
                   >
                 </li>
                 <li>
-                  <a href="#" class="py-1 d-block"
+                  <a href="./practice-areas.html" class="py-1 d-block"
                     ><span class="ion-ios-arrow-forward mr-3"></span>Fire
                     Accident</a
                   >
                 </li>
                 <li>
-                  <a href="#" class="py-1 d-block"
+                  <a href="./practice-areas.html" class="py-1 d-block"
                     ><span class="ion-ios-arrow-forward mr-3"></span>Employment
                     Law</a
                   >
                 </li>
                 <li>
-                  <a href="#" class="py-1 d-block"
+                  <a href="./practice-areas.html" class="py-1 d-block"
                     ><span class="ion-ios-arrow-forward mr-3"></span>Property
                     Law</a
                   >
