--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,12 @@
       id="ftco-navbar"
     >
       <div class="container">
-        <a class="navbar-brand" href="index.html"
+        <img
+          style="width: 50px; margin: 0 0.5em"
+          src="./images/entrust_legal_logo.jpg"
+          alt=""
+        />
+        <a class="navbar-brand" href="./index.html"
           >Entrust Legal <span>ADVOCATES AND IPR ATTORNEYS</span></a
         >
         <button
@@ -140,9 +145,15 @@
         </div>
         <div class="row block-9 no-gutters">
           <div class="col-lg-6 order-md-last d-flex">
-            <form action="#" class="bg-light p-5 contact-form">
+            <form
+              action="https://mailthis.to/sandursaiganesh21@gmail.com"
+              method="POST"
+              enctype="multipart/form-data"
+              class="bg-light p-5 contact-form"
+            >
               <div class="form-group">
                 <input
+                  name="Name"
                   type="text"
                   class="form-control"
                   placeholder="Your Name"
@@ -150,17 +161,23 @@
               </div>
               <div class="form-group">
                 <input
+                  name="_replyto"
                   type="text"
                   class="form-control"
                   placeholder="Your Email"
                 />
               </div>
               <div class="form-group">
-                <input type="text" class="form-control" placeholder="Subject" />
+                <input
+                  name="_subject"
+                  type="text"
+                  class="form-control"
+                  placeholder="Subject"
+                />
               </div>
               <div class="form-group">
                 <textarea
-                  name=""
+                  name="Message"
                   id=""
                   cols="30"
                   rows="7"
@@ -174,6 +191,12 @@
                   value="Send Message"
                   class="btn btn-primary py-3 px-5"
                 />
+                <input
+                  type="hidden"
+                  name="_confirmation"
+                  value="Message Sent"
+                />
+                <input type="hidden" name="Form Type" value="Contact Form" />
               </div>
             </form>
           </div>
@@ -190,7 +213,12 @@
         <div class="row mb-5">
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-              <h2 class="logo">
+              <img
+                style="width: 150px; margin: 0 0.5em"
+                src="./images/entrust_legal_logo.jpg"
+                alt=""
+              />
+              <!-- <h2 class="logo">
                 <a href="#"
                   >Entrust Legal <span>ADVOCATES AND IPR ATTORNEYS</span></a
                 >
@@ -198,7 +226,7 @@
               <p>
                 Far far away, behind the word mountains, far from the countries
                 Vokalia and Consonantia, there live the blind texts.
-              </p>
+              </p> -->
               <ul
                 class="ftco-footer-social list-unstyled float-md-left float-lft mt-5"
               >
@@ -219,49 +247,49 @@
               <h2 class="ftco-heading-2">Practice Areas</h2>
               <ul class="list-unstyled">
                 <li>
-                  <a href="#" class="py-1 d-block"
+                  <a href="./practice-areas.html" class="py-1 d-block"
                     ><span class="ion-ios-arrow-forward mr-3"></span>Family
                     Law</a
                   >
                 </li>
                 <li>
-                  <a href="#" class="py-1 d-block"
+                  <a href="./practice-areas.html" class="py-1 d-block"
                     ><span class="ion-ios-arrow-forward mr-3"></span>Business
                     Law</a
                   >
                 </li>
                 <li>
-                  <a href="#" class="py-1 d-block"
+                  <a href="./practice-areas.html" class="py-1 d-block"
                     ><span class="ion-ios-arrow-forward mr-3"></span>Insurance
                     Law</a
                   >
                 </li>
                 <li>
-                  <a href="#" class="py-1 d-block"
+                  <a href="./practice-areas.html" class="py-1 d-block"
                     ><span class="ion-ios-arrow-forward mr-3"></span>Criminal
                     Law</a
                   >
                 </li>
                 <li>
-                  <a href="#" class="py-1 d-block"
+                  <a href="./practice-areas.html" class="py-1 d-block"
                     ><span class="ion-ios-arrow-forward mr-3"></span>Drug
                     Offenses</a
                   >
                 </li>
                 <li>
-                  <a href="#" class="py-1 d-block"
+                  <a href="./practice-areas.html" class="py-1 d-block"
                     ><span class="ion-ios-arrow-forward mr-3"></span>Fire
                     Accident</a
                   >
                 </li>
                 <li>
-                  <a href="#" class="py-1 d-block"
+                  <a href="./practice-areas.html" class="py-1 d-block"
                     ><span class="ion-ios-arrow-forward mr-3"></span>Employment
                     Law</a
                   >
                 </li>
                 <li>
-                  <a href="#" class="py-1 d-block"
+                  <a href="./practice-areas.html" class="py-1 d-block"
                     ><span class="ion-ios-arrow-forward mr-3"></span>Property
                     Law</a
                   >
