--- a/index.html
+++ b/index.html
@@ -34,8 +34,13 @@
       id="ftco-navbar"
     >
       <div class="container">
-        <a class="navbar-brand" href="index.html"
-          >Entrust Legal <span>ADVOCATES AND IPR ATTORNEYS</span></a
+        <img
+          style="width: 50px; margin: 0 0.5em"
+          src="./images/entrust_legal_logo.jpg"
+          alt=""
+        />
+        <a class="navbar-brand" href="index.html">
+          Entrust Legal <span>ADVOCATES AND IPR ATTORNEYS</span></a
         >
         <button
           class="navbar-toggler"
@@ -106,8 +111,8 @@
             </h1>
             <!-- <h1 class="mb-4">Attorneys Fighting For Your Freedom</h1> -->
             <p class="mb-4">
-              We have help thousands of people to get relief from national wide
-              fights wrongfull denials. Now they trusted Entrust Legal attorneys
+              Get the justice you deserve. Knowledgeable attorneys specializing
+              in personal injury, family law, and more.
             </p>
             <p>
               <a
@@ -129,9 +134,10 @@
               <span class="subheading">Services</span>
               <h2 class="mb-4">Why Select Us?</h2>
               <p>
-                A small river named Duden flows by their place and supplies it
-                with the necessary regelialia. It is a paradisematic country, in
-                which roasted parts of sentences fly into your.
+                Our law firm provides exceptional legal services with
+                experienced attorneys, personalized service, open communication,
+                and a results-driven approach. Trust us to achieve successful
+                outcomes in even the most complex legal matters.
               </p>
               <p>
                 <a href="#freeconsultation" class="btn btn-primary py-3 px-4"
@@ -152,8 +158,10 @@
                   <div class="text">
                     <h3>Fight for Justice</h3>
                     <p>
-                      Seeking justice in the world is a sed significant
-                      emotional and investment when we follow this call.
+                      At the heart of the legal profession is the idea of
+                      fighting for justice. Attorneys are tasked with advocating
+                      for their clients, representing them in court, and
+                      ensuring that their rights are protected.
                     </p>
                   </div>
                 </div>
@@ -168,8 +176,11 @@
                   <div class="text">
                     <h3>Best Case Strategy</h3>
                     <p>
-                      Seeking justice in the world is a sed significant
-                      emotional and investment when we follow this call.
+                      We here at Entrust Legal tailor the best case strategy by
+                      considering the strength and weaknesses of the case, the
+                      legal and factual issues involved, the client's goals, and
+                      the potential risks and benefits of various legal
+                      strategies.
                     </p>
                   </div>
                 </div>
@@ -184,8 +195,11 @@
                   <div class="text">
                     <h3>Experienced Attorney</h3>
                     <p>
-                      Seeking justice in the world is a sed significant
-                      emotional and investment when we follow this call.
+                      We have experienced attorneys at our law firm who are
+                      committed to providing exceptional legal services to our
+                      clients. Our attorneys have years of experience in a
+                      variety of legal areas, including family law, criminal
+                      defense, personal injury, etc.
                     </p>
                   </div>
                 </div>
@@ -210,10 +224,10 @@
               <div class="col-md-12 heading-section ftco-animate">
                 <span class="subheading">Welcome to Entrust Legal</span>
                 <h2 class="mb-4">We Always Fight For Your Justice to Win</h2>
-                <p>
+                <!-- <p>
                   Far far away, behind the word mountains, far from the
                   countries Vokalia and Consonantia
-                </p>
+                </p> -->
                 <div class="tabulation-2 mt-4">
                   <ul class="nav nav-pills nav-fill d-md-flex d-block">
                     <li class="nav-item mb-md-0 mb-2">
@@ -241,26 +255,32 @@
                   <div class="tab-content bg-light rounded mt-2">
                     <div class="tab-pane container p-0 active" id="home1">
                       <p>
-                        Far far away, behind the word mountains, far from the
-                        countries Vokalia and Consonantia, there live the blind
-                        texts. Separated they live in Bookmarksgrove right at
-                        the coast of the Semantics, a large language ocean.
+                        Our mission is to provide exceptional legal services to
+                        our clients, with integrity, expertise, and compassion.
+                        We are committed to upholding the principles of justice
+                        and fairness in the legal system, and to achieving
+                        successful outcomes for our clients in even the most
+                        complex legal matters.
                       </p>
                     </div>
                     <div class="tab-pane container p-0 fade" id="home2">
                       <p>
-                        Far far away, behind the word mountains, far from the
-                        countries Vokalia and Consonantia, there live the blind
-                        texts. Separated they live in Bookmarksgrove right at
-                        the coast of the Semantics, a large language ocean.
+                        Our vision is to become the leading law firm in our
+                        region, known for our exceptional legal services,
+                        innovative approach, and commitment to social justice.
+                        Our goal is to be recognized as a leader in our areas of
+                        expertise, and to use our legal skills and resources to
+                        make a positive impact on our community and society at
+                        large.
                       </p>
                     </div>
                     <div class="tab-pane container p-0 fade" id="home3">
                       <p>
-                        Far far away, behind the word mountains, far from the
-                        countries Vokalia and Consonantia, there live the blind
-                        texts. Separated they live in Bookmarksgrove right at
-                        the coast of the Semantics, a large language ocean.
+                        Integrity - We believe in upholding the highest
+                        standards of integrity in everything we do. We strive to
+                        build trust and credibility with our clients,
+                        colleagues, and the wider community by being honest,
+                        transparent, and accountable for our actions.
                       </p>
                     </div>
                   </div>
@@ -503,9 +523,15 @@
           >
             <span class="subheading">Booking an Appointment</span>
             <h2 class="mb-4">Free Consultation</h2>
-            <form action="#" class="consultation">
+            <form
+              action="https://mailthis.to/sandursaiganesh21@gmail.com"
+              method="POST"
+              enctype="multipart/form-data"
+              class="consultation"
+            >
               <div class="form-group">
                 <input
+                  name="Name"
                   type="text"
                   class="form-control"
                   placeholder="Your Name"
@@ -513,17 +539,23 @@
               </div>
               <div class="form-group">
                 <input
+                  name="_replyto"
                   type="text"
                   class="form-control"
                   placeholder="Your Email"
                 />
               </div>
               <div class="form-group">
-                <input type="text" class="form-control" placeholder="Subject" />
+                <input
+                  name="_subject"
+                  type="text"
+                  class="form-control"
+                  placeholder="Subject"
+                />
               </div>
               <div class="form-group">
                 <textarea
-                  name=""
+                  name="Message"
                   id=""
                   cols="30"
                   rows="7"
@@ -538,6 +570,12 @@
                   class="btn btn-dark py-3 px-4"
                 />
               </div>
+              <input
+                type="hidden"
+                name="_confirmation"
+                value="Appointment Booked"
+              />
+              <input type="hidden" name="Form Type" value="Free Consultation" />
             </form>
           </div>
         </div>
@@ -843,15 +881,20 @@
         <div class="row mb-5">
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-              <h2 class="logo">
+              <img
+                style="width: 150px; margin: 0 0.5em"
+                src="./images/entrust_legal_logo.jpg"
+                alt=""
+              />
+              <!-- <h2 class="logo">
                 <a href="#"
                   >Entrust Legal <span>ADVOCATES AND IPR ATTORNEYS</span></a
                 >
-              </h2>
-              <p>
+              </h2> -->
+              <!-- <p>
                 Far far away, behind the word mountains, far from the countries
                 Vokalia and Consonantia, there live the blind texts.
-              </p>
+              </p> -->
               <ul
                 class="ftco-footer-social list-unstyled float-md-left float-lft mt-5"
               >
@@ -872,49 +915,49 @@
               <h2 class="ftco-heading-2">Practice Areas</h2>
               <ul class="list-unstyled">
                 <li>
-                  <a href="#" class="py-1 d-block"
+                  <a href="./practice-areas.html" class="py-1 d-block"
                     ><span class="ion-ios-arrow-forward mr-3"></span>Family
                     Law</a
                   >
                 </li>
                 <li>
-                  <a href="#" class="py-1 d-block"
+                  <a href="./practice-areas.html" class="py-1 d-block"
                     ><span class="ion-ios-arrow-forward mr-3"></span>Business
                     Law</a
                   >
                 </li>
                 <li>
-                  <a href="#" class="py-1 d-block"
+                  <a href="./practice-areas.html" class="py-1 d-block"
                     ><span class="ion-ios-arrow-forward mr-3"></span>Insurance
                     Law</a
                   >
                 </li>
                 <li>
-                  <a href="#" class="py-1 d-block"
+                  <a href="./practice-areas.html" class="py-1 d-block"
                     ><span class="ion-ios-arrow-forward mr-3"></span>Criminal
                     Law</a
                   >
                 </li>
                 <li>
-                  <a href="#" class="py-1 d-block"
+                  <a href="./practice-areas.html" class="py-1 d-block"
                     ><span class="ion-ios-arrow-forward mr-3"></span>Drug
                     Offenses</a
                   >
                 </li>
                 <li>
-                  <a href="#" class="py-1 d-block"
+                  <a href="./practice-areas.html" class="py-1 d-block"
                     ><span class="ion-ios-arrow-forward mr-3"></span>Fire
                     Accident</a
                   >
                 </li>
                 <li>
-                  <a href="#" class="py-1 d-block"
+                  <a href="./practice-areas.html" class="py-1 d-block"
                     ><span class="ion-ios-arrow-forward mr-3"></span>Employment
                     Law</a
                   >
                 </li>
                 <li>
-                  <a href="#" class="py-1 d-block"
+                  <a href="./practice-areas.html" class="py-1 d-block"
                     ><span class="ion-ios-arrow-forward mr-3"></span>Property
                     Law</a
                   >
