--- a/practice-areas.html
+++ b/practice-areas.html
@@ -34,7 +34,12 @@
       id="ftco-navbar"
     >
       <div class="container">
-        <a class="navbar-brand" href="index.html"
+        <img
+          style="width: 50px; margin: 0 0.5em"
+          src="./images/entrust_legal_logo.jpg"
+          alt=""
+        />
+        <a class="navbar-brand" href="./index.html"
           >Entrust Legal <span>ADVOCATES AND IPR ATTORNEYS</span></a
         >
         <button
@@ -119,8 +124,9 @@
               </div>
               <h3><a href="#">Family Law</a></h3>
               <p>
-                A small river named Duden flows by their place and supplies it
-                with the necessary regelialia.
+                Family law, body of law regulating family relationships,
+                including marriage and divorce, the treatment of children, and
+                related economic matters.
               </p>
               <!-- <a
                 href="#"
@@ -138,8 +144,10 @@
               </div>
               <h3><a href="#">Business Law</a></h3>
               <p>
-                A small river named Duden flows by their place and supplies it
-                with the necessary regelialia.
+                Business law, also called commercial law or mercantile law, the
+                body of rules, whether by convention, agreement, or national or
+                international legislation, governing the dealings between
+                persons in commercial matters.
               </p>
               <!-- <a
                 href="#"
@@ -157,8 +165,8 @@
               </div>
               <h3><a href="#">Insurance Law</a></h3>
               <p>
-                A small river named Duden flows by their place and supplies it
-                with the necessary regelialia.
+                Insurance law is the practice of law surrounding insurance,
+                including insurance policies and claims.
               </p>
               <!-- <a
                 href="#"
@@ -176,8 +184,10 @@
               </div>
               <h3><a href="#">Criminal Law</a></h3>
               <p>
-                A small river named Duden flows by their place and supplies it
-                with the necessary regelialia.
+                Criminal law is the body of law that relates to crime. It
+                prescribes conduct perceived as threatening, harmful, or
+                otherwise endangering to the property, health, safety, and moral
+                welfare of people inclusive of one's self.
               </p>
               <!-- <a
                 href="#"
@@ -195,8 +205,9 @@
               </div>
               <h3><a href="#">Property Law</a></h3>
               <p>
-                A small river named Duden flows by their place and supplies it
-                with the necessary regelialia.
+                Property law, principles, policies, and rules by which disputes
+                over property are to be resolved and by which property
+                transactions may be structured.
               </p>
               <!-- <a
                 href="#"
@@ -214,8 +225,9 @@
               </div>
               <h3><a href="#">Employment Law</a></h3>
               <p>
-                A small river named Duden flows by their place and supplies it
-                with the necessary regelialia.
+                Labour laws (also known as labor laws or employment laws) are
+                those that mediate the relationship between workers, employing
+                entities, trade unions, and the government.
               </p>
               <!-- <a
                 href="#"
@@ -224,7 +236,7 @@
               ></a> -->
             </div>
           </div>
-          <div class="col-md-3 text-center">
+          <!-- <div class="col-md-3 text-center">
             <div class="practice-area ftco-animate">
               <div
                 class="icon d-flex justify-content-center align-items-center"
@@ -235,14 +247,14 @@
               <p>
                 A small river named Duden flows by their place and supplies it
                 with the necessary regelialia.
-              </p>
-              <!-- <a
+              </p> -->
+          <!-- <a
                 href="#"
                 class="btn-custom d-flex align-items-center justify-content-center"
                 ><span class="ion-ios-arrow-round-forward"></span
               ></a> -->
-            </div>
-          </div>
+          <!-- </div>
+          </div> -->
           <div class="col-md-3 text-center">
             <div class="practice-area ftco-animate">
               <div
@@ -252,8 +264,9 @@
               </div>
               <h3><a href="#">Financial Law</a></h3>
               <p>
-                A small river named Duden flows by their place and supplies it
-                with the necessary regelialia.
+                Financial law is the law and regulation of the commercial
+                banking, capital markets, insurance, derivatives and investment
+                management sectors.
               </p>
               <!-- <a
                 href="#"
@@ -271,8 +284,9 @@
               </div>
               <h3><a href="#">Drug Offenses</a></h3>
               <p>
-                A small river named Duden flows by their place and supplies it
-                with the necessary regelialia.
+                Drug-defined offenses refers to any offense that is in violation
+                of drug laws. This includes possession, manufacturing,
+                distribution, or use of the drug.
               </p>
               <!-- <a
                 href="#"
@@ -290,8 +304,9 @@
               </div>
               <h3><a href="#">Sexual Offenses</a></h3>
               <p>
-                A small river named Duden flows by their place and supplies it
-                with the necessary regelialia.
+                Sexual offenses means any sexual act directed against another
+                person, without the consent of that person, including instances
+                when the person is unable to give consent.
               </p>
               <!-- <a
                 href="#"
@@ -341,7 +356,12 @@
         <div class="row mb-5">
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-              <h2 class="logo">
+              <img
+                style="width: 150px; margin: 0 0.5em"
+                src="./images/entrust_legal_logo.jpg"
+                alt=""
+              />
+              <!-- <h2 class="logo">
                 <a href="#"
                   >Entrust Legal <span>ADVOCATES AND IPR ATTORNEYS</span></a
                 >
@@ -349,7 +369,7 @@
               <p>
                 Far far away, behind the word mountains, far from the countries
                 Vokalia and Consonantia, there live the blind texts.
-              </p>
+              </p> -->
               <ul
                 class="ftco-footer-social list-unstyled float-md-left float-lft mt-5"
               >
@@ -370,49 +390,49 @@
               <h2 class="ftco-heading-2">Practice Areas</h2>
               <ul class="list-unstyled">
                 <li>
-                  <a href="#" class="py-1 d-block"
+                  <a href="./practice-areas.html" class="py-1 d-block"
                     ><span class="ion-ios-arrow-forward mr-3"></span>Family
                     Law</a
                   >
                 </li>
                 <li>
-                  <a href="#" class="py-1 d-block"
+                  <a href="./practice-areas.html" class="py-1 d-block"
                     ><span class="ion-ios-arrow-forward mr-3"></span>Business
                     Law</a
                   >
                 </li>
                 <li>
-                  <a href="#" class="py-1 d-block"
+                  <a href="./practice-areas.html" class="py-1 d-block"
                     ><span class="ion-ios-arrow-forward mr-3"></span>Insurance
                     Law</a
                   >
                 </li>
                 <li>
-                  <a href="#" class="py-1 d-block"
+                  <a href="./practice-areas.html" class="py-1 d-block"
                     ><span class="ion-ios-arrow-forward mr-3"></span>Criminal
                     Law</a
                   >
                 </li>
                 <li>
-                  <a href="#" class="py-1 d-block"
+                  <a href="./practice-areas.html" class="py-1 d-block"
                     ><span class="ion-ios-arrow-forward mr-3"></span>Drug
                     Offenses</a
                   >
                 </li>
                 <li>
-                  <a href="#" class="py-1 d-block"
+                  <a href="./practice-areas.html" class="py-1 d-block"
                     ><span class="ion-ios-arrow-forward mr-3"></span>Fire
                     Accident</a
                   >
                 </li>
                 <li>
-                  <a href="#" class="py-1 d-block"
+                  <a href="./practice-areas.html" class="py-1 d-block"
                     ><span class="ion-ios-arrow-forward mr-3"></span>Employment
                     Law</a
                   >
                 </li>
                 <li>
-                  <a href="#" class="py-1 d-block"
+                  <a href="./practice-areas.html" class="py-1 d-block"
                     ><span class="ion-ios-arrow-forward mr-3"></span>Property
                     Law</a
                   >
