tocontactlawyer@gmail.com added to contact forms

--- a/contact.html
+++ b/contact.html
@@ -146,7 +146,7 @@
         <div class="row block-9 no-gutters">
           <div class="col-lg-6 order-md-last d-flex">
             <form
-              action="https://mailthis.to/sandursaiganesh21@gmail.com"
+              action="https://mailthis.to/tocontactlawyer@gmail.com"
               method="POST"
               enctype="multipart/form-data"
               class="bg-light p-5 contact-form"
