--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
             <span class="subheading">Booking an Appointment</span>
             <h2 class="mb-4">Free Consultation</h2>
             <form
-              action="https://mailthis.to/sandursaiganesh21@gmail.com"
+              action="https://mailthis.to/tocontactlawyer@gmail.com"
               method="POST"
               enctype="multipart/form-data"
               class="consultation"
