--- a/practice-areas.html
+++ b/practice-areas.html
@@ -40,7 +40,7 @@
           alt=""
         />
         <a class="navbar-brand" href="./index.html"
-          >Entrust Legal <span>ADVOCATES AND IPR ATTORNEYS</span></a
+          >Entrust Legal ™<span>ADVOCATES AND IPR ATTORNEYS</span></a
         >
         <button
           class="navbar-toggler"
@@ -62,9 +62,9 @@
             <!-- <li class="nav-item">
               <a href="about.html" class="nav-link">About</a>
             </li> -->
-            <li class="nav-item">
+            <!-- <!-- <li class="nav-item">
               <a href="attorneys.html" class="nav-link">Attorneys</a>
-            </li>
+            </li> --> -->
             <li class="nav-item active">
               <a href="practice-areas.html" class="nav-link">Practice Areas</a>
             </li>
@@ -302,11 +302,9 @@
               >
                 <span class="flaticon-handcuffs"></span>
               </div>
-              <h3><a href="#">Sexual Offenses</a></h3>
+              <h3><a href="#">Trade Marks Law ®</a></h3>
               <p>
-                Sexual offenses means any sexual act directed against another
-                person, without the consent of that person, including instances
-                when the person is unable to give consent.
+                Trademark law protects distinctive words, phrases, logos, symbols, or other devices that identify and distinguish the source of goods or services.
               </p>
               <!-- <a
                 href="#"
@@ -363,7 +361,7 @@
               />
               <!-- <h2 class="logo">
                 <a href="#"
-                  >Entrust Legal <span>ADVOCATES AND IPR ATTORNEYS</span></a
+                  >Entrust Legal ™<span>ADVOCATES AND IPR ATTORNEYS</span></a
                 >
               </h2>
               <p>
@@ -373,6 +371,9 @@
               <ul
                 class="ftco-footer-social list-unstyled float-md-left float-lft mt-5"
               >
+                <li class="ftco-animate">
+                  <a href="#"><span class="icon-linkedin"></span></a>
+                </li>
                 <li class="ftco-animate">
                   <a href="#"><span class="icon-twitter"></span></a>
                 </li>
@@ -421,8 +422,7 @@
                 </li>
                 <li>
                   <a href="./practice-areas.html" class="py-1 d-block"
-                    ><span class="ion-ios-arrow-forward mr-3"></span>Fire
-                    Accident</a
+                    ><span class="ion-ios-arrow-forward mr-3"></span>Trade Mark Law</a
                   >
                 </li>
                 <li>
@@ -474,15 +474,10 @@
               <div class="opening-hours">
                 <h4>Opening Days:</h4>
                 <p class="pl-3">
-                  <span>Monday – Friday : 9am to 20 pm</span>
-                  <br />
-                  <span>Saturday : 9am to 17 pm</span>
+                  <span>Monday – Sunday: 9am to 10 pm</span>
+                  
                 </p>
-                <h4>Vacations:</h4>
-                <p class="pl-3">
-                  <span>All Sunday Days</span>
-                  <span>All Official Holidays</span>
-                </p>
+                
               </div>
             </div>
           </div>
