--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
           alt=""
         />
         <a class="navbar-brand" href="./index.html"
-          >Entrust Legal <span>ADVOCATES AND IPR ATTORNEYS</span></a
+          >Entrust Legal ™<span>ADVOCATES AND IPR ATTORNEYS</span></a
         >
         <button
           class="navbar-toggler"
@@ -220,7 +220,7 @@
               />
               <!-- <h2 class="logo">
                 <a href="#"
-                  >Entrust Legal <span>ADVOCATES AND IPR ATTORNEYS</span></a
+                  >Entrust Legal ™<span>ADVOCATES AND IPR ATTORNEYS</span></a
                 >
               </h2>
               <p>
@@ -230,6 +230,9 @@
               <ul
                 class="ftco-footer-social list-unstyled float-md-left float-lft mt-5"
               >
+                <li class="ftco-animate">
+                  <a href="#"><span class="icon-linkedin"></span></a>
+                </li>
                 <li class="ftco-animate">
                   <a href="#"><span class="icon-twitter"></span></a>
                 </li>
@@ -278,8 +281,7 @@
                 </li>
                 <li>
                   <a href="./practice-areas.html" class="py-1 d-block"
-                    ><span class="ion-ios-arrow-forward mr-3"></span>Fire
-                    Accident</a
+                    ><span class="ion-ios-arrow-forward mr-3"></span>Trade Mark Law</a
                   >
                 </li>
                 <li>
@@ -331,15 +333,10 @@
               <div class="opening-hours">
                 <h4>Opening Days:</h4>
                 <p class="pl-3">
-                  <span>Monday – Friday : 9am to 20 pm</span>
-                  <br />
-                  <span>Saturday : 9am to 17 pm</span>
+                  <span>Monday – Sunday: 9am to 10 pm</span>
+                  
                 </p>
-                <h4>Vacations:</h4>
-                <p class="pl-3">
-                  <span>All Sunday Days</span>
-                  <span>All Official Holidays</span>
-                </p>
+                
               </div>
             </div>
           </div>
