--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           alt=""
         />
         <a class="navbar-brand" href="index.html">
-          Entrust Legal <span>ADVOCATES AND IPR ATTORNEYS</span></a
+          Entrust Legal ™<span>ADVOCATES AND IPR ATTORNEYS</span></a
         >
         <button
           class="navbar-toggler"
@@ -59,12 +59,12 @@
             <li class="nav-item active">
               <a href="index.html" class="nav-link">Home</a>
             </li>
-            <!-- <li class="nav-item">
-              <a href="about.html" class="nav-link">About</a>
-            </li> -->
             <li class="nav-item">
-              <a href="attorneys.html" class="nav-link">Attorneys</a>
+              <a href="about.html" class="nav-link">About</a>
             </li>
+            <!-- <li class="nav-item">
+              <a href="attorneys.html" class="nav-link">Attorneys</a>
+            </li> -->
             <li class="nav-item">
               <a href="practice-areas.html" class="nav-link">Practice Areas</a>
             </li>
@@ -102,11 +102,11 @@
           <div class="col-md-6 ftco-animate">
             <!-- <h2 class="subheading">Welcome To Entrust Legal</h2> -->
             <h1>
-              Attorneys Fighting For Your
+              Attorneys Defending Your
               <span
                 class="txt-rotate"
                 data-period="2000"
-                data-rotate='[ "Freedom.", "Rights.", "Case.", "Custody." ]'
+                data-rotate='[ "Intellectual Property.", "Rights.", "Case.", "Custody." ]'
               ></span>
             </h1>
             <!-- <h1 class="mb-4">Attorneys Fighting For Your Freedom</h1> -->
@@ -156,7 +156,7 @@
                     <span class="flaticon-lawyer"></span>
                   </div>
                   <div class="text">
-                    <h3>Fight for Justice</h3>
+                    <h3>Defending Effectively</h3>
                     <p>
                       At the heart of the legal profession is the idea of
                       fighting for justice. Attorneys are tasked with advocating
@@ -223,12 +223,13 @@
             <div class="row justify-content-start pt-3 pb-3">
               <div class="col-md-12 heading-section ftco-animate">
                 <span class="subheading">Welcome to Entrust Legal</span>
-                <h2 class="mb-4">We Always Fight For Your Justice to Win</h2>
+                <h2 class="mb-4">Entrust Legal takes a bold leap
+                  towards an AI-First Future with Strategic AI Adoption</h2>
                 <!-- <p>
                   Far far away, behind the word mountains, far from the
                   countries Vokalia and Consonantia
                 </p> -->
-                <div class="tabulation-2 mt-4">
+                <!-- <div class="tabulation-2 mt-4">
                   <ul class="nav nav-pills nav-fill d-md-flex d-block">
                     <li class="nav-item mb-md-0 mb-2">
                       <a
@@ -284,7 +285,7 @@
                       </p>
                     </div>
                   </div>
-                </div>
+                </div> -->
                 <div class="years d-flex mt-4 mt-md-5">
                   <h4>
                     <span class="number mr-2" data-number="40">0</span>
@@ -364,151 +365,6 @@
       </div>
     </section>
 
-    <section class="ftco-section ftco-no-pt">
-      <div class="container-fluid px-md-5">
-        <div class="row justify-content-center mb-5 pb-3">
-          <div class="col-md-7 text-center heading-section ftco-animate">
-            <span class="subheading">Our Attorney</span>
-            <h2 class="mb-4">Our Legal Attorneys</h2>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-3 col-sm-6">
-            <div class="block-2 ftco-animate">
-              <div class="flipper">
-                <div
-                  class="front"
-                  style="background-image: url(/images/person_1.jpg)"
-                >
-                  <div class="box">
-                    <h2>Ryan Anderson</h2>
-                    <p>Civil Lawyer</p>
-                  </div>
-                </div>
-                <div class="back">
-                  <!-- back content -->
-                  <blockquote>
-                    <p>
-                      &ldquo;Even the all-powerful Pointing has no control about
-                      the blind texts it is an almost unorthographic life One
-                      day however a small line of blind text &rdquo;
-                    </p>
-                  </blockquote>
-                  <div class="author d-flex">
-                    <div class="image align-self-center">
-                      <img src="images/person_1.jpg" alt="" />
-                    </div>
-                    <div class="name align-self-center ml-3">
-                      Ryan Anderson <span class="position">Civil Lawyer</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-sm-6">
-            <div class="block-2 ftco-animate">
-              <div class="flipper">
-                <div
-                  class="front"
-                  style="background-image: url(/images/person_2.jpg)"
-                >
-                  <div class="box">
-                    <h2>Greg Washer</h2>
-                    <p>Business Lawyer</p>
-                  </div>
-                </div>
-                <div class="back">
-                  <!-- back content -->
-                  <blockquote>
-                    <p>
-                      &ldquo;Even the all-powerful Pointing has no control about
-                      the blind texts it is an almost unorthographic life One
-                      day however a small line of blind text &rdquo;
-                    </p>
-                  </blockquote>
-                  <div class="author d-flex">
-                    <div class="image align-self-center">
-                      <img src="images/person_2.jpg" alt="" />
-                    </div>
-                    <div class="name align-self-center ml-3">
-                      Greg Washer<span class="position">Business Lawyer</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-sm-6">
-            <div class="block-2 ftco-animate">
-              <div class="flipper">
-                <div
-                  class="front"
-                  style="background-image: url(/images/person_3.jpg)"
-                >
-                  <div class="box">
-                    <h2>Tony Henderson</h2>
-                    <p>Criminal Defense</p>
-                  </div>
-                </div>
-                <div class="back">
-                  <!-- back content -->
-                  <blockquote>
-                    <p>
-                      &ldquo;Even the all-powerful Pointing has no control about
-                      the blind texts it is an almost unorthographic life One
-                      day however a small line of blind text &rdquo;
-                    </p>
-                  </blockquote>
-                  <div class="author d-flex">
-                    <div class="image align-self-center">
-                      <img src="images/person_3.jpg" alt="" />
-                    </div>
-                    <div class="name align-self-center ml-3">
-                      Tony Henderson
-                      <span class="position">Criminal Defense</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-sm-6">
-            <div class="block-2 ftco-animate">
-              <div class="flipper">
-                <div
-                  class="front"
-                  style="background-image: url(/images/person_4.jpg)"
-                >
-                  <div class="box">
-                    <h2>Jack Smith</h2>
-                    <p>Insurance Lawyer</p>
-                  </div>
-                </div>
-                <div class="back">
-                  <!-- back content -->
-                  <blockquote>
-                    <p>
-                      &ldquo;Even the all-powerful Pointing has no control about
-                      the blind texts it is an almost unorthographic life One
-                      day however a small line of blind text &rdquo;
-                    </p>
-                  </blockquote>
-                  <div class="author d-flex">
-                    <div class="image align-self-center">
-                      <img src="images/person_4.jpg" alt="" />
-                    </div>
-                    <div class="name align-self-center ml-3">
-                      Jack Smith <span class="position">Insurance Lawyer</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
 
     <section
       id="freeconsultation"
@@ -715,134 +571,6 @@
       </div>
     </section>
 
-    <section class="ftco-section bg-light">
-      <div class="container">
-        <div class="row justify-content-center mb-5 pb-3">
-          <div class="col-md-7 heading-section text-center ftco-animate">
-            <span class="subheading">Our Blog</span>
-            <h2>Recent Blog</h2>
-          </div>
-        </div>
-        <div class="row d-flex">
-          <div class="col-md-4 d-flex ftco-animate">
-            <div class="blog-entry justify-content-end">
-              <div class="text px-4 py-4">
-                <h3 class="heading mb-0">
-                  <a href="./blog-single1.html"
-                    >5 Ways to Prepare for Your First Meeting with a Lawyer</a
-                  >
-                </h3>
-              </div>
-              <a
-                href="./blog-single1.html"
-                class="block-20"
-                style="background-image: url('images/image_1.jpg')"
-              >
-              </a>
-              <div class="text p-4 float-right d-block">
-                <div class="topper d-flex align-items-center">
-                  <div class="one py-2 pl-3 pr-1 align-self-stretch">
-                    <span class="day">18</span>
-                  </div>
-                  <div class="two pl-0 pr-3 py-2 align-self-stretch">
-                    <span class="yr">2022</span>
-                    <span class="mos">October</span>
-                  </div>
-                </div>
-                <p>
-                  Meeting with a lawyer for the first time can be a daunting
-                  experience, especially if you're not sure what to expect. Here
-                  are five tips to help you prepare for your first meeting with
-                  a lawyer
-                </p>
-                <p>
-                  <a href="./blog-single1.html" class="btn btn-primary"
-                    >Read more</a
-                  >
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 d-flex ftco-animate">
-            <div class="blog-entry justify-content-end">
-              <div class="text px-4 py-4">
-                <h3 class="heading mb-0">
-                  <a href="./blog-single2.html"
-                    >The Benefits of Working with a Specialized Attorney</a
-                  >
-                </h3>
-              </div>
-              <a
-                href="./blog-single2.html"
-                class="block-20"
-                style="background-image: url('images/image_3.jpg')"
-              >
-              </a>
-              <div class="text p-4 float-right d-block">
-                <div class="topper d-flex align-items-center">
-                  <div class="one py-2 pl-3 pr-1 align-self-stretch">
-                    <span class="day">20</span>
-                  </div>
-                  <div class="two pl-0 pr-3 py-2 align-self-stretch">
-                    <span class="yr">2022</span>
-                    <span class="mos">December</span>
-                  </div>
-                </div>
-                <p>
-                  When it comes to legal matters, it's important to work with an
-                  attorney who specializes in the area of law that's relevant to
-                  your case.
-                </p>
-                <p>
-                  <a href="./blog-single2.html" class="btn btn-primary"
-                    >Read more</a
-                  >
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 d-flex ftco-animate">
-            <div class="blog-entry justify-content-end">
-              <div class="text px-4 py-4">
-                <h3 class="heading mb-0">
-                  <a href="./blog-single3.html"
-                    >How to Protect Your Business from Legal Risks</a
-                  >
-                </h3>
-              </div>
-              <a
-                href="./blog-single.html"
-                class="block-20"
-                style="background-image: url('images/image_2.jpg')"
-              >
-              </a>
-              <div class="text p-4 float-right d-block">
-                <div class="topper d-flex align-items-center">
-                  <div class="one py-2 pl-3 pr-1 align-self-stretch">
-                    <span class="day">15</span>
-                  </div>
-                  <div class="two pl-0 pr-3 py-2 align-self-stretch">
-                    <span class="yr">2023</span>
-                    <span class="mos">January</span>
-                  </div>
-                </div>
-                <p>
-                  Running a business comes with many risks, and legal risks are
-                  among the most significant. Failure to address legal issues
-                  properly can lead to costly legal disputes, damage to your
-                  reputation, and potentially even the closure of your business.
-                </p>
-                <p>
-                  <a href="./blog-single3.html" class="btn btn-primary"
-                    >Read more</a
-                  >
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
 
     <!-- <section class="ftco-section ftco-no-pt ftco-no-pb bg-light">
       <div class="container">
@@ -888,7 +616,7 @@
               />
               <!-- <h2 class="logo">
                 <a href="#"
-                  >Entrust Legal <span>ADVOCATES AND IPR ATTORNEYS</span></a
+                  >Entrust Legal ™<span>ADVOCATES AND IPR ATTORNEYS</span></a
                 >
               </h2> -->
               <!-- <p>
@@ -898,6 +626,9 @@
               <ul
                 class="ftco-footer-social list-unstyled float-md-left float-lft mt-5"
               >
+                <li class="ftco-animate">
+                  <a href="#"><span class="icon-linkedin"></span></a>
+                </li>
                 <li class="ftco-animate">
                   <a href="#"><span class="icon-twitter"></span></a>
                 </li>
@@ -946,8 +677,7 @@
                 </li>
                 <li>
                   <a href="./practice-areas.html" class="py-1 d-block"
-                    ><span class="ion-ios-arrow-forward mr-3"></span>Fire
-                    Accident</a
+                    ><span class="ion-ios-arrow-forward mr-3"></span>Trade Mark Law</a
                   >
                 </li>
                 <li>
@@ -999,15 +729,10 @@
               <div class="opening-hours">
                 <h4>Opening Days:</h4>
                 <p class="pl-3">
-                  <span>Monday – Friday : 9am to 20 pm</span>
-                  <br />
-                  <span>Saturday : 9am to 17 pm</span>
+                  <span>Monday – Sunday: 9am to 10 pm</span>
+                  
                 </p>
-                <h4>Vacations:</h4>
-                <p class="pl-3">
-                  <span>All Sunday Days</span>
-                  <span>All Official Holidays</span>
-                </p>
+                
               </div>
             </div>
           </div>
