Added ./ to /images

--- a/about.html
+++ b/about.html
@@ -114,7 +114,7 @@
       <div class="row align-items-center">
         <!-- Left Column with Image -->
         <div class="col-md-6 mb-5">
-          <img src="/images/about.svg" alt="Sample Image" class="img-fluid">
+          <img src="./images/about.svg" alt="Sample Image" class="img-fluid">
         </div>
   
         <!-- Right Column with Heading and Paragraph -->
