Added whatsapp icon

--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
             </h1>
             <!-- <h1 class="mb-4">Attorneys Fighting For Your Freedom</h1> -->
             <p class="mb-4">
-              Get the justice you deserve. Knowledgeable attorneys specializing
-              in personal injury, family law, and more.
+              Get the expert legal advice you deserve. Knowledgeable attorneys specializing
+              in corporate laws, white collar crimes and more.
             </p>
             <p>
               <a
@@ -655,6 +655,9 @@
                 </li>
                 <li class="ftco-animate">
                   <a href="#"><span class="icon-instagram"></span></a>
+                </li>
+                <li class="ftco-animate whatsapp-icon">
+                  <a href="https://wa.me/+919030995500"><span class="icon-whatsapp"></span></a>
                 </li>
               </ul>
             </div>
