--- a/contact.html
+++ b/contact.html
@@ -230,7 +230,7 @@
                 Vokalia and Consonantia, there live the blind texts.
               </p> -->
               <ul
-                class="ftco-footer-social list-unstyled float-md-left float-lft mt-5"
+                class="ftco-footer-social list-unstyled float-md-left float-left mt-5"
               >
                 <li class="ftco-animate">
                   <a href="#"><span class="icon-linkedin"></span></a>
@@ -243,6 +243,9 @@
                 </li>
                 <li class="ftco-animate">
                   <a href="#"><span class="icon-instagram"></span></a>
+                </li>
+                <li class="ftco-animate whatsapp-icon">
+                  <a href="https://wa.me/+919030995500"><span class="icon-whatsapp"></span></a>
                 </li>
               </ul>
             </div>
