footer envolope spacinf issue fixed

--- a/practice-areas.html
+++ b/practice-areas.html
@@ -470,7 +470,7 @@
                   </li>
                   <li>
                     <a href="mailto:tocontactlawyer@gmail.com"
-                      ><span class="icon icon-envelope"></span
+                      ><span class="icon icon-envelope d-block"></span
                       ><span class="text">tocontactlawyer@gmail.com</span></a
                     >
                   </li>
