--- a/about.html
+++ b/about.html
@@ -269,15 +269,14 @@
         </div>
         <div class="row">
           <div class="col-md-12 text-center">
-            <p>
-              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-              Copyright &copy;
+            <p>Copyright &copy;
               <script>
                 document.write(new Date().getFullYear());
               </script>
               | All rights reserved
 
-              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+            </p>
+            <p style="font-size: 12px;">Designed and Developed by <a href="mailto:sandursaiganesh@gmail.com">Sai Ganesh</a></p>
             </p>
           </div>
         </div>
